tests/should-fail/semantics/return-null-as-real.j
function test takes nothing returns real
    return null
endfunction
